Fix low contrast

--- a/skins/standard/global.css
+++ b/skins/standard/global.css
@@ -2752,7 +2752,7 @@ pre.comment-text {
  */
 
 :root {
-  --bug-status-color-open: #229921;
+  --bug-status-color-open: #188716;
   --bug-status-color-closed: #1B6AB8;
   --bug-type-color-defect: #EA3C3D;
   --bug-type-color-enhancement: #2ABA27;
